kubernetes/apps/media/bazarr/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.kube.home.arpa`)
      kind: Rule
      services:
        - name: bazarr
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: bazarr.kube.home.arpa
